--- a/并发-并行-异步-同步.md
+++ b/并发-并行-异步-同步.md
@@ -3,6 +3,6 @@
 2，什么是并行
     多个核心同时执行不同的任务，直到任务完成，不用切换任务。
 3，什么是异步
-    不同的任务不会相互等待
-4，什么是同步
-    前一个任务执行完毕才会执行下一个任务
+    需要等待的任务
+4，什么是同步任务
+    不要要等待，所有自上而下，按顺序执行的任务
