--- a/强缓存-协商缓存.md
+++ b/强缓存-协商缓存.md
@@ -2,7 +2,7 @@
     当请求资源时，如果浏览器请过过相同资源，并做过强缓存处理，那么在这个缓存的过期时间内存，浏览器会直接使用缓存资源，不再想服务器发起请求。如果资源过期，浏览器就会重新想服务器发请求，并再次强缓存
 
 #   协商缓存
-    当请求资源时，如果浏览器请求过相同资源，并做过协商缓存处理，还是发请求到服务前验证资源是否有变化，如果有就返回最新的资源，并做协商缓存处理，如果没有直接返回304状态，表示浏览器可以只用缓存
+    当请求资源时，如果浏览器请求过相同资源，并做过协商缓存处理，还是发请求到服务器验证资源是否有变化，如果有就返回最新的资源，并做协商缓存处理，如果没有直接返回304状态，表示浏览器可以用缓存
 
 #   缓存的优点
     1，减少数据传输
