--- a/浏览器的渲染原理.md
+++ b/浏览器的渲染原理.md
@@ -51,7 +51,7 @@
        >  然后就建立客户端和端午段的传输通道
 #   TCP 四次挥手(断开连接)
         1，客户端或服务端发起请求报文FIN  表示请求断开连接
-        2，服务端响应报文ACK 表示自己进入关闭等待状态，这是还可以传输为传输完成的数据
+        2，服务端响应报文ACK 表示自己进入关闭等待状态，这是还可以传输未传输完成的数据
         3，服务端再次发起一个报文FIN ACK表示数据传输完成，确认断开连接
         4，客户端放发起报文ACK确定成功断开连接，然后等待一段时间后断开连接，因为有可能网络原因造成 报文丢失，服务端如果长时间未收到确认断开的报文，就会重新发起FIN ACK  报文确定断开连接
         优点：传输数据稳定
@@ -60,7 +60,7 @@
 #   UDP协议
     UDP协议是基于非连接的，就是将数据包简单的封装一下，然后发出去。数据包并没有状态上的联系，所以容易产生丢包
     优点：性能损耗少，资源占用少,传输快
-    缺点：传输不问题，因为网络传输中造成的丢包，UDP协议并不能保证，所以UDP在传输稳定性上要弱于TCP协议
+    缺点：传输不稳定，因为网络传输中造成的丢包，UDP协议并不能保证，所以UDP在传输稳定性上要弱于TCP协议
 
 #   为什么是三次握手而不是两次
     防止报文丢失
